--- a/photos.css
+++ b/photos.css
@@ -105,3 +105,7 @@ input:checked + label .description {
 .card[for="c4"] {
     background-image: url('./IMG_0423.jpg');
 }
+
+h1 {
+    text-align: center;
+}
